tests/reject/proof_without_lemma.alg
sort S : Sort;
op a : → S;
eq refl(x : S) x = x;
proof
qed;
